# Craig_Vulkan

./: .gitignore  CMakeLists.txt  Craig_Vulkan.sln
Craig_Vulkan/: Craig_Vulkan.vcxproj  Craig_Vulkan.vcxproj.filters  Template.cpp  Template.hpp  imgui.ini  main.cpp
Craig_Vulkan/Craig/: Craig_Camera.cpp  Craig_Camera.hpp  Craig_Constants.hpp  Craig_Editor.cpp  Craig_Editor.hpp  Craig_Framework.cpp  Craig_Framework.hpp  Craig_GameObject.cpp  Craig_GameObject.hpp  Craig_Renderer.cpp  Craig_Renderer.hpp  Craig_Renderer2.cpp  Craig_Renderer2.hpp  Craig_ResourceManager.cpp  Craig_ResourceManager.hpp  Craig_Scene.cpp  Craig_Scene.hpp  Craig_SceneManager.cpp  Craig_SceneManager.hpp  Craig_ShaderCompilation.cpp  Craig_ShaderCompilation.hpp  Craig_Utilities.cpp  Craig_Utilities.hpp  Craig_Window.cpp  Craig_Window.hpp
Craig_Vulkan/Craig/Renderer/: Craig_CommandManager.cpp  Craig_CommandManager.hpp  Craig_DescriptorManager.cpp  Craig_DescriptorManager.hpp  Craig_Device.cpp  Craig_Device.hpp  Craig_Image.cpp  Craig_Image.hpp  Craig_ImageHelpers.cpp  Craig_ImageHelpers.hpp  Craig_Instance.cpp  Craig_Instance.hpp  Craig_Pipeline.cpp  Craig_Pipeline.hpp  Craig_RenderingAttachments.cpp  Craig_RenderingAttachments.hpp  Craig_Swapchain.cpp  Craig_Swapchain.hpp  Craig_SyncManager.cpp  Craig_SyncManager.hpp  Craig_TextureManager.cpp  Craig_TextureManager.hpp
Craig_Vulkan/data/models/: Kirby.mtl
Craig_Vulkan/data/shaders/: FragmentShader.frag  VertexShader.vert  frag.spv  vert.spv
